--- a/FinanceTracker/app/build.gradle
+++ b/FinanceTracker/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+
+    // Color Picker
+    implementation "com.github.yukuku:ambilwarna:2.0.1"
 }
