--- a/FinanceTracker/app/src/main/AndroidManifest.xml
+++ b/FinanceTracker/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.financetracker">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinanceTracker"
         tools:targetApi="31">
+        <!-- Enabling Provider to share files -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.financetracker.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider" />
+        </provider>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_main"
             android:theme="@style/Theme.FinanceTracker.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,5 +37,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
