--- a/FinanceTracker/build.gradle
+++ b/FinanceTracker/build.gradle
@@ -8,7 +8,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-rc01"
     }
 }
@@ -17,6 +16,14 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 task clean(type: Delete) {
